syntax = "proto3";
option csharp_namespace = "ClipboardSyncService";
package clipboardsync;

service ClipboardSyncService {
  rpc SyncClipboard(ClipboardData) returns (SyncResponse);
  rpc RegisterNode(NodeInfo) returns (RegistrationResponse);
  rpc GetActiveNodes(Empty) returns (NodesResponse);
  rpc StreamClipboardUpdates(Empty) returns (stream ClipboardData);
}

message ClipboardData {
  string source_host = 1;
  int64 timestamp = 2;
  string message_id = 3;
  repeated ClipboardFormat formats = 4;
}

message ClipboardFormat {
  string format_name = 1;
  bytes data = 2;
  map<string, string> metadata = 3;
}

message NodeInfo {
  string host_name = 1;
  string ip_address = 2;
  int32 port = 3;
}

message SyncResponse {
  bool success = 1;
  string message = 2;
}

message RegistrationResponse {
  bool success = 1;
  repeated NodeInfo active_nodes = 2;
}

message NodesResponse {
  repeated NodeInfo nodes = 1;
}

message Empty {}